force-app/main/default/objects/Wish_List__c/Wish_List__c.object-meta.xml
<CustomObject>
    <label>Wish List</label>
    <nameField>
        <label>Wish List Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Wish Lists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>