force-app/main/default/objects/Wish_List__c/fields/Assigned_Elf__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Elf__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Elf</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Wish_Lists</relationshipName>
    <type>Lookup</type>
</CustomField>