force-app/main/default/objects/Wish_List__c/fields/Wish__c.field-meta.xml
<CustomField>
    <fullName>Wish__c</fullName>
    <label>Wish</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>